# fantasize

./: .gitignore  .gitmodules  PKGBUILD  README.md
app/: CMakeLists.txt  meson.build
app/.cache/clangd/index/: main.cxx.488F90579B08E0FB.idx  nvidia.cxx.8895D8320431F2BD.idx  nvidia.h.C592977E7E2F38C1.idx  pwm.cxx.7C00E8794BC99BB4.idx  pwm.h.A7AB59217778DE05.idx
app/doc/: ApplicationStart.plantuml  Class.plantuml  Initialization.plantuml
app/include/: App.h  ConfigManager.h  Controller.h  CorrelatePwmRpm.h  Fan.h  FanGenerator.h  HwmonFan.h  HwmonTemperatureSensor.h  Mapping.h  Nvidia.h  NvidiaTemperatureSensor.h  Printable.h  Pwm.h  SensorsWrapper.h  Serializable.h  Serializer.h  Settings.h  TemperatureSensor.h  pwm.h
app/include/fan/: Aggregators.h  Fan.h  FanCurve.h  FanLabeler.h  HwmonFan.h  PwmControl.h
app/include/pwm/: PWMControl.h  PWMControlFacade.h
app/include/sensor/: GPUSensorsFacade.h  HwmonSensor.h  HwmonTemperatureSensor.h  LMSensor.h  LMSensorsFacade.h  NvidiaSensor.h  NvidiaTemperatureSensor.h  Sensor.h  SensorManager.h  SensorsWrapper.h
app/src/: App.cxx  ConfigManager.cxx  Controller.cxx  Controller.hxx  FanGenerator.cxx  HwmonTemperatureSensor.cxx  Mapping.cxx  Nvidia.cxx  NvidiaTemperatureSensor.cxx  Pwm.cxx  SensorsWrapper.cxx  Serializer.cxx  Settings.cxx  main.cxx  nvidia.cxx  pwm.cxx
app/src/fan/: Aggregators.cxx  FanCurve.cxx  FanLabeler.cxx  HwmonFan.cxx  Pwm.cxx  PwmControl.cxx
app/src/pwm/: PWMControl.cxx  PWMControlFacade.cxx
app/src/sensor/: GPUSensorsFacade.cxx  HwmonSensor.cxx  HwmonTemperatureSensor.cxx  LMSensor.cxx  LMSensorsFacade.cxx  NvidiaSensor.cxx  NvidiaTemperatureSensor.cxx  Sensor.cxx  SensorManager.cxx  SensorsWrapper.cxx
app/unit/: fantasize.service
doc/: Application Overview.drawio  Class.plantuml  InteractiveMapping.plantuml
